includes fixes for readability on chooseAttractions.html page

--- a/assets/css/chooseAttractions.css
+++ b/assets/css/chooseAttractions.css
@@ -9,6 +9,9 @@
   legend {
     font-weight: bold;
     cursor: pointer;
+    color: white;
+    text-shadow: 3px 3px orange;
+    
   }
   
   .attraction {
